--- a/src/bookfy/FXMLCreateAccount.fxml
+++ b/src/bookfy/FXMLCreateAccount.fxml
@@ -10,28 +10,30 @@
 
 <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="bookfy.FXMLCreateAccountController">
    <children>
-      <Label fx:id="fullNameLabel" layoutX="47.0" layoutY="93.0" text="Full Name:" />
-      <JFXTextField fx:id="fullNameTextField" layoutX="47.0" layoutY="114.0" prefHeight="29.0" prefWidth="500.0" />
-      <Label fx:id="emailAddressLabel" layoutX="46.0" layoutY="169.0" text="Email Address:" />
-      <JFXTextField fx:id="EmailAddressTextField" layoutX="47.0" layoutY="190.0" prefHeight="29.0" prefWidth="500.0" />
-      <Label fx:id="userNameLabel" layoutX="46.0" layoutY="281.0" text="User Name:" />
-      <Label fx:id="passwordLabel" layoutX="47.0" layoutY="356.0" text="Password:" />
-      <Label fx:id="verifyPasswordLabel" layoutX="47.0" layoutY="435.0" text="Verify Password:" />
-      <JFXTextField fx:id="userNameTextField" layoutX="47.0" layoutY="302.0" prefHeight="29.0" prefWidth="500.0" />
-      <JFXTextField fx:id="passwordTextField" layoutX="47.0" layoutY="377.0" prefHeight="29.0" prefWidth="500.0" />
-      <JFXTextField layoutX="47.0" layoutY="456.0" onAction="#verifyPasswordTextField" prefHeight="29.0" prefWidth="500.0" />
+      <Label fx:id="firstNameLabel" layoutX="47.0" layoutY="93.0" text="First Name:" />
+      <JFXTextField fx:id="firstNameTextField" layoutX="46.0" layoutY="114.0" prefHeight="29.0" prefWidth="500.0" />
+      <Label fx:id="emailAddressLabel" layoutX="46.0" layoutY="236.0" text="Email Address:" />
+      <JFXTextField fx:id="EmailAddressTextField" layoutX="47.0" layoutY="247.0" prefHeight="29.0" prefWidth="500.0" />
+      <Label fx:id="userNameLabel" layoutX="46.0" layoutY="338.0" text="User Name:" />
+      <Label fx:id="passwordLabel" layoutX="47.0" layoutY="413.0" text="Password:" />
+      <Label fx:id="verifyPasswordLabel" layoutX="47.0" layoutY="492.0" text="Verify Password:" />
+      <JFXTextField fx:id="userNameTextField" layoutX="47.0" layoutY="359.0" prefHeight="29.0" prefWidth="500.0" />
+      <JFXTextField fx:id="passwordTextField" layoutX="47.0" layoutY="434.0" prefHeight="29.0" prefWidth="500.0" />
+      <JFXTextField layoutX="47.0" layoutY="513.0" onAction="#verifyPasswordTextField" prefHeight="29.0" prefWidth="500.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" disable="true" fill="#7a7f83" height="29.0" layoutX="14.0" layoutY="56.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" width="564.0" />
       <Label layoutX="26.0" layoutY="60.0" text="ABOUT YOU" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" disable="true" fill="#7a7f83" height="29.0" layoutX="14.0" layoutY="237.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" width="564.0" />
-      <Label layoutX="26.0" layoutY="241.0" text="CREDENTIALS" textFill="WHITE">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" disable="true" fill="#7a7f83" height="29.0" layoutX="14.0" layoutY="294.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" width="564.0" />
+      <Label layoutX="26.0" layoutY="298.0" text="CREDENTIALS" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <JFXButton fx:id="saveButton" defaultButton="true" layoutX="26.0" layoutY="542.0" onMouseClicked="#saveListener" text="SAVE" />
+      <JFXButton fx:id="saveButton" defaultButton="true" layoutX="26.0" layoutY="599.0" onMouseClicked="#saveListener" text="SAVE" />
+      <Label fx:id="LastNameLabel" layoutX="46.0" layoutY="160.0" text="Last Name:" />
+      <JFXTextField fx:id="lastNameTextField" layoutX="47.0" layoutY="181.0" prefHeight="29.0" prefWidth="500.0" />
    </children>
 </AnchorPane>
