--- a/src/bookfy/FXMLCreateAccount.fxml
+++ b/src/bookfy/FXMLCreateAccount.fxml
@@ -7,32 +7,36 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="bookfy.FXMLCreateAccountController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookfy.FXMLCreateAccountController">
    <children>
-      <Label fx:id="firstNameLabel" layoutX="47.0" layoutY="93.0" text="First Name:" />
-      <JFXTextField fx:id="firstNameTextField" layoutX="46.0" layoutY="114.0" prefHeight="29.0" prefWidth="500.0" />
-      <Label fx:id="emailAddressLabel" layoutX="46.0" layoutY="236.0" text="Email Address:" />
-      <JFXTextField fx:id="EmailAddressTextField" layoutX="47.0" layoutY="247.0" prefHeight="29.0" prefWidth="500.0" />
-      <Label fx:id="userNameLabel" layoutX="46.0" layoutY="338.0" text="User Name:" />
-      <Label fx:id="passwordLabel" layoutX="47.0" layoutY="413.0" text="Password:" />
-      <Label fx:id="verifyPasswordLabel" layoutX="47.0" layoutY="492.0" text="Verify Password:" />
-      <JFXTextField fx:id="userNameTextField" layoutX="47.0" layoutY="359.0" prefHeight="29.0" prefWidth="500.0" />
-      <JFXTextField fx:id="passwordTextField" layoutX="47.0" layoutY="434.0" prefHeight="29.0" prefWidth="500.0" />
-      <JFXTextField layoutX="47.0" layoutY="513.0" onAction="#verifyPasswordTextField" prefHeight="29.0" prefWidth="500.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" disable="true" fill="#7a7f83" height="29.0" layoutX="14.0" layoutY="56.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" width="564.0" />
-      <Label layoutX="26.0" layoutY="60.0" text="ABOUT YOU" textFill="WHITE">
+      <JFXTextField fx:id="firstNameTextField" labelFloat="true" layoutX="46.0" layoutY="71.0" prefHeight="29.0" prefWidth="500.0" promptText="First Name: " />
+      <JFXTextField fx:id="lastNameTextField" labelFloat="true" layoutX="47.0" layoutY="130.0" prefHeight="29.0" prefWidth="500.0" promptText="Last Name" />
+      <JFXTextField fx:id="EmailAddressTextField" labelFloat="true" layoutX="46.0" layoutY="190.0" prefHeight="29.0" prefWidth="500.0" promptText="Email Address" />
+      <JFXTextField fx:id="emailAddressTextField" labelFloat="true" layoutX="47.0" layoutY="274.0" prefHeight="29.0" prefWidth="500.0" promptText="Address Line:" />
+      <JFXTextField fx:id="cityTextField" labelFloat="true" layoutX="47.0" layoutY="325.0" prefHeight="29.0" prefWidth="211.0" promptText="City:" />
+      <JFXTextField fx:id="StateTextField" labelFloat="true" layoutX="282.0" layoutY="325.0" prefHeight="29.0" prefWidth="68.0" promptText="State:" />
+      <JFXTextField fx:id="CountryTextField" labelFloat="true" layoutX="378.0" layoutY="325.0" promptText="Country:" />
+      <JFXTextField fx:id="userNameTextField" labelFloat="true" layoutX="47.0" layoutY="489.0" prefHeight="29.0" prefWidth="500.0" promptText="User Name" />
+      <JFXTextField fx:id="passwordTextField" accessibleRole="PASSWORD_FIELD" labelFloat="true" layoutX="47.0" layoutY="564.0" prefHeight="29.0" prefWidth="500.0" promptText="Password" />
+      <JFXTextField fx:id="verifyPasswordTextField" accessibleRole="PASSWORD_FIELD" labelFloat="true" layoutX="47.0" layoutY="643.0" prefHeight="29.0" prefWidth="500.0" promptText="Verify Password:" />
+      <JFXButton fx:id="saveButton" defaultButton="true" layoutX="48.0" layoutY="732.0" onMouseClicked="#saveListener" prefHeight="31.0" prefWidth="106.0" text="SAVE" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" disable="true" fill="#7a7f83" height="29.0" layoutX="14.0" layoutY="14.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" width="564.0" />
+      <Label layoutX="26.0" layoutY="18.0" text="ABOUT YOU" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" disable="true" fill="#7a7f83" height="29.0" layoutX="14.0" layoutY="294.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" width="564.0" />
-      <Label layoutX="26.0" layoutY="298.0" text="CREDENTIALS" textFill="WHITE">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" disable="true" fill="#7a7f83" height="29.0" layoutX="14.0" layoutY="424.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" width="564.0" />
+      <Label layoutX="26.0" layoutY="428.0" text="CREDENTIALS" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <JFXButton fx:id="saveButton" defaultButton="true" layoutX="26.0" layoutY="599.0" onMouseClicked="#saveListener" text="SAVE" />
-      <Label fx:id="LastNameLabel" layoutX="46.0" layoutY="160.0" text="Last Name:" />
-      <JFXTextField fx:id="lastNameTextField" layoutX="47.0" layoutY="181.0" prefHeight="29.0" prefWidth="500.0" />
+      <Label layoutX="29.0" layoutY="240.0" text="Home Address (optional)">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <JFXButton fx:id="cancelButton" defaultButton="true" layoutX="176.0" layoutY="732.0" onMouseClicked="#saveListener" prefHeight="31.0" prefWidth="106.0" text="CANCEL" />
    </children>
 </AnchorPane>
