--- a/src/bookfy/FXMLMain.fxml
+++ b/src/bookfy/FXMLMain.fxml
@@ -7,14 +7,15 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<HBox alignment="CENTER" prefHeight="1000.0" prefWidth="800.0" styleClass="pane" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookfy.FXMLMainController">
+<HBox alignment="CENTER" prefHeight="900.0" prefWidth="800.0" styleClass="pane" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookfy.FXMLMainController">
    <children>
       <GridPane prefWidth="890.0" styleClass="pane">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="125.0" minHeight="125.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="100.0" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -27,7 +28,8 @@
                   </ImageView>
                </children>
             </HBox>
-            <HBox fx:id="mainContent" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1" />
+            <HBox fx:id="searchPane" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1" />
+            <HBox fx:id="mainContent" alignment="CENTER" prefHeight="750.0" prefWidth="800.0" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
