--- a/src/bookfy/FXMLHome.fxml
+++ b/src/bookfy/FXMLHome.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane id="AnchorPane" maxHeight="750.0" minHeight="750.0" prefHeight="750.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="bookfy.FXMLHomeController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="730.0" prefWidth="750.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="bookfy.FXMLHomeController">
    <children>
-      <ImageView fitHeight="700.0" fitWidth="800.0" layoutY="25.0" AnchorPane.bottomAnchor="25.0" AnchorPane.topAnchor="25.0">
+      <ImageView fitHeight="706.0" fitWidth="728.0" layoutX="11.0" layoutY="11.0">
          <image>
             <Image url="@home.jpg" />
          </image>
