--- a/src/bookfy/FXMLEditAccount.fxml
+++ b/src/bookfy/FXMLEditAccount.fxml
@@ -3,12 +3,13 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookfy.FXMLCreateAccountController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookfy.FXMLEditAccountController">
    <children>
       <JFXTextField fx:id="firstNameTextField" labelFloat="true" layoutX="46.0" layoutY="71.0" prefHeight="29.0" prefWidth="500.0" promptText="First Name: " />
       <JFXTextField fx:id="lastNameTextField" labelFloat="true" layoutX="47.0" layoutY="130.0" prefHeight="29.0" prefWidth="500.0" promptText="Last Name" />
@@ -41,5 +42,16 @@
       <JFXButton fx:id="cancelButton" defaultButton="true" layoutX="176.0" layoutY="732.0" onAction="#cancel" onMouseClicked="#saveListener" prefHeight="31.0" prefWidth="106.0" styleClass="button-raised" text="CANCEL" />
       <Label fx:id="addressMissingInputLabel" layoutX="378.0" layoutY="379.0" text=" " />
       <Label fx:id="passwordMismatchLabel" layoutX="46.0" layoutY="696.0" />
+      <JFXButton layoutX="382.0" layoutY="732.0" prefHeight="31.0" prefWidth="169.0" stylesheets="@styles.css" text="Deactivate Account">
+         <styleClass>
+            <String fx:value="button-flat" />
+            <String fx:value="button-raised" />
+         </styleClass>
+      </JFXButton>
+      <Label layoutX="383.0" layoutY="763.0" prefHeight="21.0" prefWidth="225.0" text="This action cannot be undone.">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
