--- a/src/bookfy/FXMLViewUser.fxml
+++ b/src/bookfy/FXMLViewUser.fxml
@@ -8,17 +8,27 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="750.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookfy.FXMLViewUserProfileController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="750.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookfy.FXMLViewUserController">
    <children>
-      <VBox prefHeight="600.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="TOP_RIGHT" prefHeight="600.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label prefHeight="27.0" prefWidth="805.0" styleClass="headerlabel" text="Label">
                <VBox.margin>
                   <Insets left="10.0" right="10.0" top="10.0" />
                </VBox.margin></Label>
+            <HBox alignment="TOP_RIGHT" spacing="10.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#back" styleClass="button-flat" text="BACK" />
+                  <Button mnemonicParsing="false" onAction="#signoff" styleClass="button-flat" text="SIGN OFF" />
+               </children>
+               <VBox.margin>
+                  <Insets right="10.0" />
+               </VBox.margin>
+            </HBox>
             <GridPane prefHeight="563.0" prefWidth="750.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -82,7 +92,7 @@
                               <Insets left="10.0" top="10.0" />
                            </VBox.margin>
                         </GridPane>
-                        <Button mnemonicParsing="false" styleClass="button-flat" text="EDIT SHIPPING INFO">
+                        <Button mnemonicParsing="false" onAction="#editShippingInfo" styleClass="button-flat" text="EDIT SHIPPING INFO">
                            <VBox.margin>
                               <Insets left="10.0" />
                            </VBox.margin>
@@ -99,16 +109,21 @@
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </Label>
+                        <VBox fx:id="creditCardPane" prefHeight="248.0" prefWidth="375.0">
+                           <VBox.margin>
+                              <Insets left="10.0" top="10.0" />
+                           </VBox.margin>
+                        </VBox>
                      </children>
                   </VBox>
                   <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                      <children>
-                        <Label styleClass="namelabel" text="Janse Smith">
+                        <Label fx:id="lblName" styleClass="namelabel" text="Janse Smith">
                            <padding>
                               <Insets left="30.0" />
                            </padding>
                         </Label>
-                        <Label styleClass="emaillabel" text="techy_jane" textFill="#f44336">
+                        <Label fx:id="lblUserID" styleClass="emaillabel" text="techy_jane" textFill="#f44336">
                            <VBox.margin>
                               <Insets left="45.0" />
                            </VBox.margin>
@@ -133,14 +148,14 @@
                                     <Image url="@homeicon.jpg" />
                                  </image>
                               </ImageView>
-                              <Label text="Label" GridPane.columnIndex="1" />
+                              <Label fx:id="lblEmail" text="Label" GridPane.columnIndex="1" />
                               <Label fx:id="lblHomeAddress" text="Address" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                            </children>
                            <VBox.margin>
                               <Insets top="10.0" />
                            </VBox.margin>
                         </GridPane>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" styleClass="button-flat" text="EDIT ACCOUNT">
+                        <Button mnemonicParsing="false" onAction="#editUser" prefHeight="25.0" prefWidth="109.0" styleClass="button-flat" text="EDIT ACCOUNT">
                            <VBox.margin>
                               <Insets left="35.0" top="10.0" />
                            </VBox.margin>
