--- a/src/bookfy/FXMLSearch.fxml
+++ b/src/bookfy/FXMLSearch.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 
-
 <AnchorPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookfy.FXMLSearchController">
    <children>
       <HBox prefHeight="50.0" prefWidth="800.0">
@@ -44,12 +43,12 @@
                   </HBox>
                   <StackPane alignment="CENTER_RIGHT" prefHeight="150.0" prefWidth="200.0">
                      <children>
-                        <TextField fx:id="txtSearch">
+                        <TextField fx:id="txtSearch" onKeyPressed="#check">
                            <opaqueInsets>
                               <Insets left="20.0" />
                            </opaqueInsets>
                         </TextField>
-                        <ImageView fitHeight="20.0" fitWidth="20.0">
+                        <ImageView fitHeight="20.0" fitWidth="20.0" onMouseClicked="#search">
                            <image>
                               <Image url="@search.jpg" />
                            </image>
