--- a/src/bookfy/FXMLViewUser.fxml
+++ b/src/bookfy/FXMLViewUser.fxml
@@ -16,7 +16,7 @@
    <children>
       <VBox alignment="TOP_RIGHT" prefHeight="600.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label prefHeight="27.0" prefWidth="805.0" styleClass="headerlabel" text="Label">
+            <Label prefHeight="27.0" prefWidth="805.0" styleClass="headerlabel" text="MY ACCOUNT">
                <VBox.margin>
                   <Insets left="10.0" right="10.0" top="10.0" />
                </VBox.margin></Label>
@@ -44,17 +44,17 @@
                <children>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
+                        <ImageView fitHeight="200.0" fitWidth="200.0">
+                           <image>
+                              <Image url="@noimage.jpg" />
+                           </image>
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin>
+                        </ImageView>
                         <VBox alignment="CENTER" maxWidth="-Infinity" prefWidth="100.0">
                            <children>
-                              <ImageView fitHeight="200.0" fitWidth="200.0">
-                                 <image>
-                                    <Image url="@noimage.jpg" />
-                                 </image>
-                                 <VBox.margin>
-                                    <Insets top="30.0" />
-                                 </VBox.margin>
-                              </ImageView>
-                              <Button mnemonicParsing="false" styleClass="button-flat" text="UPLOAD IMAGE" />
+                              <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="118.0" styleClass="button-flat" text="UPLOAD IMAGE" />
                            </children>
                            <VBox.margin>
                               <Insets left="10.0" />
@@ -155,7 +155,7 @@
                               <Insets top="10.0" />
                            </VBox.margin>
                         </GridPane>
-                        <Button mnemonicParsing="false" onAction="#editUser" prefHeight="25.0" prefWidth="109.0" styleClass="button-flat" text="EDIT ACCOUNT">
+                        <Button mnemonicParsing="false" onAction="#editUser" prefHeight="27.0" prefWidth="139.0" styleClass="button-flat" text="EDIT ACCOUNT" textAlignment="CENTER">
                            <VBox.margin>
                               <Insets left="35.0" top="10.0" />
                            </VBox.margin>
