--- a/src/bookfy/FXMLBookCompact.fxml
+++ b/src/bookfy/FXMLBookCompact.fxml
@@ -2,12 +2,14 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.Rating?>
 
 <AnchorPane id="AnchorPane" maxHeight="220.0" maxWidth="145.0" minHeight="220.0" minWidth="145.0" prefHeight="220.0" prefWidth="145.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
@@ -17,14 +19,17 @@
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="121.0" spacing="5.0">
                <children>
                   <Rating fx:id="ratRating" minWidth="100.0" prefWidth="100.0" scaleX="0.6" scaleY="0.6" />
-                  <ImageView fx:id="imgView" fitHeight="150.0" fitWidth="125.0" pickOnBounds="true">
+                  <ImageView fx:id="imgView" fitHeight="150.0" fitWidth="125.0" onMouseClicked="#bookDetails" pickOnBounds="true">
                      <image>
                         <Image url="@nobook.jpg" />
                      </image>
                   </ImageView>
                   <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
                      <children>
-                        <Button fx:id="btnView" mnemonicParsing="false" styleClass="button-flat" text="VIEW" />
+                        <Label fx:id="lblPrice" text="\$0.00">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font></Label>
                         <Button fx:id="btnAdd" maxWidth="50.0" minWidth="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="50.0" styleClass="button-raised" />
                      </children>
                      <VBox.margin>
