--- a/src/bookfy/FXMLSearch.fxml
+++ b/src/bookfy/FXMLSearch.fxml
@@ -18,8 +18,9 @@
          <children>
             <GridPane prefHeight="50.0" prefWidth="800.0" styleClass="search_style">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="40.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="328.0" minWidth="10.0" prefWidth="311.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.0" minWidth="10.0" prefWidth="369.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -28,7 +29,7 @@
                   <Insets left="40.0" right="40.0" />
                </HBox.margin>
                <children>
-                  <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1">
+                  <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="2">
                      <children>
                         <Button mnemonicParsing="false" onAction="#myAccount" styleClass="button-flat" text="MY ACCOUNT" />
                         <ImageView>
@@ -41,9 +42,9 @@
                         <Insets right="20.0" />
                      </GridPane.margin>
                   </HBox>
-                  <StackPane alignment="CENTER_RIGHT" prefHeight="150.0" prefWidth="200.0">
+                  <StackPane alignment="CENTER_RIGHT" prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1">
                      <children>
-                        <TextField fx:id="txtSearch" onKeyPressed="#check">
+                        <TextField fx:id="txtSearch" onKeyPressed="#check" prefHeight="25.0" prefWidth="305.0">
                            <opaqueInsets>
                               <Insets left="20.0" />
                            </opaqueInsets>
@@ -61,6 +62,11 @@
                         <Insets left="20.0" />
                      </padding>
                   </StackPane>
+                  <HBox alignment="CENTER_RIGHT">
+                     <children>
+                        <Button fx:id="btnHome" mnemonicParsing="false" onMouseClicked="#home" prefHeight="25.0" prefWidth="40.0" styleClass="button-flat" />
+                     </children>
+                  </HBox>
                </children>
             </GridPane>
          </children>
