--- a/src/bookfy/FXMLHome.fxml
+++ b/src/bookfy/FXMLHome.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -32,66 +33,126 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <CheckBox fx:id="chk1" mnemonicParsing="false">
-                     <graphic>
-                        <Rating fx:id="rat1" rating="1.0" scaleX="0.6" scaleY="0.6">
-                           <padding>
-                              <Insets left="-45.0" />
-                           </padding>
-                        </Rating>
-                     </graphic>
+                  <HBox alignment="CENTER">
                      <VBox.margin>
                         <Insets left="25.0" />
                      </VBox.margin>
-                  </CheckBox>
-                  <CheckBox fx:id="chk2" layoutX="35.0" layoutY="42.0" mnemonicParsing="false">
-                     <graphic>
-                        <Rating fx:id="rat2" scaleX="0.6" scaleY="0.6">
+                     <children>
+                        <CheckBox fx:id="chk1" mnemonicParsing="false" textAlignment="RIGHT">
+                           <graphic>
+                              <Rating fx:id="rat1" rating="1.0" scaleX="0.55" scaleY="0.55">
+                                 <padding>
+                                    <Insets left="-55.0" />
+                                 </padding>
+                              </Rating>
+                           </graphic>
+                        </CheckBox>
+                        <Label text="&amp;UP">
                            <padding>
-                              <Insets left="-45.0" />
+                              <Insets left="-30.0" />
                            </padding>
-                        </Rating>
-                     </graphic>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER">
                      <VBox.margin>
                         <Insets left="25.0" />
                      </VBox.margin>
-                  </CheckBox>
-                  <CheckBox fx:id="chk3" layoutX="35.0" layoutY="79.0" mnemonicParsing="false">
-                     <graphic>
-                        <Rating fx:id="rat3" rating="3.0" scaleX="0.6" scaleY="0.6">
+                     <children>
+                        <CheckBox fx:id="chk2" mnemonicParsing="false">
+                           <graphic>
+                              <Rating fx:id="rat2" scaleX="0.55" scaleY="0.55">
+                                 <padding>
+                                    <Insets left="-55.0" />
+                                 </padding>
+                              </Rating>
+                           </graphic>
+                        </CheckBox>
+                        <Label text="&amp;UP">
                            <padding>
-                              <Insets left="-45.0" />
+                              <Insets left="-30.0" />
                            </padding>
-                        </Rating>
-                     </graphic>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER">
                      <VBox.margin>
                         <Insets left="25.0" />
                      </VBox.margin>
-                  </CheckBox>
-                  <CheckBox fx:id="chk4" layoutX="10.0" layoutY="116.0" mnemonicParsing="false">
-                     <graphic>
-                        <Rating fx:id="rat4" rating="4.0" scaleX="0.6" scaleY="0.6">
+                     <children>
+                        <CheckBox fx:id="chk3" mnemonicParsing="false">
+                           <graphic>
+                              <Rating fx:id="rat3" rating="3.0" scaleX="0.55" scaleY="0.55">
+                                 <padding>
+                                    <Insets left="-55.0" />
+                                 </padding>
+                              </Rating>
+                           </graphic>
+                        </CheckBox>
+                        <Label text="&amp;UP">
                            <padding>
-                              <Insets left="-45.0" />
+                              <Insets left="-30.0" />
                            </padding>
-                        </Rating>
-                     </graphic>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER">
                      <VBox.margin>
                         <Insets left="25.0" />
                      </VBox.margin>
-                  </CheckBox>
-                  <CheckBox fx:id="chk5" layoutX="10.0" layoutY="116.0" mnemonicParsing="false">
-                     <graphic>
-                        <Rating fx:id="rat5" rating="5.0" scaleX="0.6" scaleY="0.6">
+                     <children>
+                        <CheckBox fx:id="chk4" mnemonicParsing="false">
+                           <graphic>
+                              <Rating fx:id="rat4" rating="4.0" scaleX="0.55" scaleY="0.55">
+                                 <padding>
+                                    <Insets left="-55.0" />
+                                 </padding>
+                              </Rating>
+                           </graphic>
+                        </CheckBox>
+                        <Label text="&amp;UP">
                            <padding>
-                              <Insets left="-45.0" />
+                              <Insets left="-30.0" />
                            </padding>
-                        </Rating>
-                     </graphic>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER">
                      <VBox.margin>
                         <Insets left="25.0" />
                      </VBox.margin>
-                  </CheckBox>
+                     <children>
+                        <CheckBox fx:id="chk5" mnemonicParsing="false">
+                           <graphic>
+                              <Rating fx:id="rat5" rating="5.0" scaleX="0.55" scaleY="0.55">
+                                 <padding>
+                                    <Insets left="-55.0" />
+                                 </padding>
+                              </Rating>
+                           </graphic>
+                        </CheckBox>
+                        <Label text="&amp;UP">
+                           <padding>
+                              <Insets left="-30.0" />
+                           </padding>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
                   <Label text="Genre">
                      <font>
                         <Font name="System Bold" size="18.0" />
