--- a/src/bookfy/FXMLSearch.fxml
+++ b/src/bookfy/FXMLSearch.fxml
@@ -32,7 +32,7 @@
                   <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="2">
                      <children>
                         <Button mnemonicParsing="false" onAction="#myAccount" styleClass="button-flat" text="MY ACCOUNT" />
-                        <ImageView>
+                        <ImageView fx:id="btnShoppingCart" onMouseClicked="#viewCart">
                            <image>
                               <Image url="@shoppingcart.jpg" />
                            </image>
