--- a/src/bookfy/FXMLBookDetails.fxml
+++ b/src/bookfy/FXMLBookDetails.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.Rating?>
 
-<AnchorPane id="AnchorPane" prefHeight="730.0" prefWidth="750.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookfy.FXMLBookDetailsController">
+<AnchorPane id="AnchorPane" prefHeight="730.0" prefWidth="750.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="725.0" styleClass="headerlabel" text="BOOK DETAILS" />
       <ImageView fx:id="imgImage" fitHeight="300.0" fitWidth="225.0" layoutX="21.0" layoutY="50.0" onMouseClicked="#expand" pickOnBounds="true">
