--- a/src/bookfy/FXMLHome.fxml
+++ b/src/bookfy/FXMLHome.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Pagination?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -28,6 +32,27 @@
          <children>
             <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0">
                <children>
+                  <ComboBox fx:id="cboSort" prefWidth="175.0" promptText="Sort By">
+                     <padding>
+                        <Insets bottom="3.0" top="3.0" />
+                     </padding>
+                     <styleClass>
+                        <String fx:value="combo-box1" />
+                        <String fx:value="combo-box1-popup" />
+                     </styleClass>
+                  </ComboBox>
+                  <ComboBox fx:id="cboView" prefWidth="175.0" promptText="View">
+                     <VBox.margin>
+                        <Insets bottom="5.0" top="8.0" />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="3.0" top="3.0" />
+                     </padding>
+                     <styleClass>
+                        <String fx:value="combo-box1" />
+                        <String fx:value="combo-box1-popup" />
+                     </styleClass>
+                  </ComboBox>
                   <Label text="Book Rating">
                      <font>
                         <Font name="System Bold" size="18.0" />
@@ -38,7 +63,7 @@
                         <Insets left="25.0" />
                      </VBox.margin>
                      <children>
-                        <CheckBox fx:id="chk1" mnemonicParsing="false" textAlignment="RIGHT">
+                        <RadioButton fx:id="radio1" mnemonicParsing="false" selected="true" styleClass="radiobutton">
                            <graphic>
                               <Rating fx:id="rat1" rating="1.0" scaleX="0.55" scaleY="0.55">
                                  <padding>
@@ -46,7 +71,10 @@
                                  </padding>
                               </Rating>
                            </graphic>
-                        </CheckBox>
+                           <toggleGroup>
+                              <ToggleGroup fx:id="group" />
+                           </toggleGroup>
+                        </RadioButton>
                         <Label text="&amp;UP">
                            <padding>
                               <Insets left="-30.0" />
@@ -62,7 +90,7 @@
                         <Insets left="25.0" />
                      </VBox.margin>
                      <children>
-                        <CheckBox fx:id="chk2" mnemonicParsing="false">
+                        <RadioButton fx:id="radio2" mnemonicParsing="false" styleClass="radiobutton" toggleGroup="$group">
                            <graphic>
                               <Rating fx:id="rat2" scaleX="0.55" scaleY="0.55">
                                  <padding>
@@ -70,7 +98,7 @@
                                  </padding>
                               </Rating>
                            </graphic>
-                        </CheckBox>
+                        </RadioButton>
                         <Label text="&amp;UP">
                            <padding>
                               <Insets left="-30.0" />
@@ -86,7 +114,7 @@
                         <Insets left="25.0" />
                      </VBox.margin>
                      <children>
-                        <CheckBox fx:id="chk3" mnemonicParsing="false">
+                        <RadioButton fx:id="radio3" mnemonicParsing="false" styleClass="radiobutton" toggleGroup="$group">
                            <graphic>
                               <Rating fx:id="rat3" rating="3.0" scaleX="0.55" scaleY="0.55">
                                  <padding>
@@ -94,7 +122,7 @@
                                  </padding>
                               </Rating>
                            </graphic>
-                        </CheckBox>
+                        </RadioButton>
                         <Label text="&amp;UP">
                            <padding>
                               <Insets left="-30.0" />
@@ -110,7 +138,7 @@
                         <Insets left="25.0" />
                      </VBox.margin>
                      <children>
-                        <CheckBox fx:id="chk4" mnemonicParsing="false">
+                        <RadioButton fx:id="radio4" mnemonicParsing="false" styleClass="radiobutton" toggleGroup="$group">
                            <graphic>
                               <Rating fx:id="rat4" rating="4.0" scaleX="0.55" scaleY="0.55">
                                  <padding>
@@ -118,7 +146,7 @@
                                  </padding>
                               </Rating>
                            </graphic>
-                        </CheckBox>
+                        </RadioButton>
                         <Label text="&amp;UP">
                            <padding>
                               <Insets left="-30.0" />
@@ -134,7 +162,7 @@
                         <Insets left="25.0" />
                      </VBox.margin>
                      <children>
-                        <CheckBox fx:id="chk5" mnemonicParsing="false">
+                        <RadioButton fx:id="radio5" mnemonicParsing="false" styleClass="radiobutton" toggleGroup="$group">
                            <graphic>
                               <Rating fx:id="rat5" rating="5.0" scaleX="0.55" scaleY="0.55">
                                  <padding>
@@ -142,7 +170,7 @@
                                  </padding>
                               </Rating>
                            </graphic>
-                        </CheckBox>
+                        </RadioButton>
                         <Label text="&amp;UP">
                            <padding>
                               <Insets left="-30.0" />
