--- a/src/bookfy/FXMLSearch.fxml
+++ b/src/bookfy/FXMLSearch.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,6 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookfy.FXMLSearchController">
    <children>
@@ -18,7 +20,7 @@
          <children>
             <GridPane prefHeight="50.0" prefWidth="800.0" styleClass="search_style">
               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="40.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="80.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="328.0" minWidth="10.0" prefWidth="311.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.0" minWidth="10.0" prefWidth="369.0" />
               </columnConstraints>
@@ -32,11 +34,23 @@
                   <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="2">
                      <children>
                         <Button mnemonicParsing="false" onAction="#myAccount" styleClass="button-flat" text="MY ACCOUNT" />
-                        <ImageView fx:id="btnShoppingCart" onMouseClicked="#viewCart">
-                           <image>
-                              <Image url="@shoppingcart.jpg" />
-                           </image>
-                        </ImageView>
+                        <StackPane>
+                           <children>
+                              <ImageView fx:id="btnShoppingCart" onMouseClicked="#viewCart">
+                                 <image>
+                                    <Image url="@shoppingcart.jpg" />
+                                 </image>
+                              </ImageView>
+                              <Label fx:id="lblQty" onMouseClicked="#viewCart" text="0" textFill="WHITE">
+                                 <StackPane.margin>
+                                    <Insets left="2.0" top="-10.0" />
+                                 </StackPane.margin>
+                                 <font>
+                                    <Font name="System Bold" size="10.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </StackPane>
                      </children>
                      <GridPane.margin>
                         <Insets right="20.0" />
@@ -49,7 +63,7 @@
                               <Insets left="20.0" />
                            </opaqueInsets>
                         </TextField>
-                        <ImageView fitHeight="20.0" fitWidth="20.0" onMouseClicked="#search">
+                        <ImageView fx:id="imgSearch" fitHeight="20.0" fitWidth="20.0" onMouseClicked="#search">
                            <image>
                               <Image url="@search.jpg" />
                            </image>
@@ -64,7 +78,7 @@
                   </StackPane>
                   <HBox alignment="CENTER_RIGHT">
                      <children>
-                        <Button fx:id="btnHome" mnemonicParsing="false" onMouseClicked="#home" prefHeight="25.0" prefWidth="40.0" styleClass="button-flat" />
+                        <Button fx:id="btnHome" mnemonicParsing="false" onMouseClicked="#home" prefHeight="25.0" prefWidth="60.0" styleClass="button-flat" />
                      </children>
                   </HBox>
                </children>
